0.7.2, 
-----
+ Add plotlines for reference black and white in YUV graphs (GitHub issue #96)
+ Add plotlines for broadcast illegal and yuv illegal saturation levels
+ Update waveform and vectorscope filters to new waveform and vectorscope filters in FFmpeg 2.8
+ Add field modes to Tile and Zoom

0.7.1, 2015-05-15
-----
+ Expanded documentation and example images
+ Sample range filter - show broadcast against full range interpretation
x Fixed crash with MOV files having non video/audio tracks (e.g. a caption track)
x Fixed crash with some AVI files having streams with unknown format
x Mac-styled toolbar disabled because the toolbar dos not permit to move the window as expected by Mac users
x Show hh:mm:ss.mmm in playback window even if evaluation hasn’t happened yet
x Fix crash with files having timecode as the first track

0.7.0, 2015-02-17
-----
+ Saturation Highlight playback filter
+ Zoom playback filter
+ Graph tracker text with semi transparent gray background
+ Basic support of Blackmagic DeckLink (tested on Mac, looking for a tester on Windows and Linux)
+ Added metadata columns in table view for color space, color range, frame rate details, sample aspect ratio
+ Added 'Broadcast Illegal Focus' filter
x Zooming in with more than the default graphs, shifts display offset (GitHub issue #41)
x Left-align graph labels, instead of centering them (GitHub issue #45)
x Y-scale label values disappear when zooming (GitHub issue #46)
x Seek was not possible in the playback window during the analysis
x Some colors change, marker text contains data values (GitHub issue #23)
x Support of Mac OS X 10.6 (GitHub issue #63)

0.6.2, 2014-10-29
-----
x Memory leaks removed

0.6.1, 2014-10-15
-----
x Crash with MP4 files on Mac OS X 10.7 (GitHub issue #40)

0.6.0, 2014-10-09
-----
+ Summarization statistics
+ pkt_duration_time is added to tha sidecar stats file in order to get the real end timestamp of the stream
+ The full width of graphs is used